--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.0-beta.6",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -18,7 +19,8 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^7.6.1",
     "react-router-dom": "^7.6.1",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.25.48"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
