--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/react": "^2.8.0-beta.6",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.8",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
