new ErrorPage, Alerts(Toastify), ProfilePage

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^7.6.1",
     "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.8",
     "yet-another-react-lightbox": "^3.23.2",
